--- a/playstatements.html
+++ b/playstatements.html
@@ -5,42 +5,180 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>IFWL — Player Statement</title>
   <style>
-    body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial;max-width:720px;margin:32px auto;padding:0 14px}
-    .card{background:#fff;border:1px solid #E6E8EF;border-radius:14px;padding:16px;box-shadow:0 8px 24px rgba(15,23,42,.06)}
-    input,textarea{width:100%;padding:10px;border:1px solid #E6E8EF;border-radius:10px;font-size:14px}
-    textarea{min-height:140px;resize:vertical}
-    button{padding:10px 14px;border-radius:10px;border:1px solid #E6E8EF;background:#111827;color:#fff;cursor:pointer}
-    button:disabled{opacity:.6;cursor:not-allowed}
-    .sub{color:#667085;font-size:13px}
-    .err{color:#B42318}
-    .ok{color:#027A48}
+    :root{
+      --bg:#f3f4f6;
+      --card:#ffffff;
+      --border:#E6E8EF;
+      --text:#111827;
+      --muted:#667085;
+      --danger:#B42318;
+      --dangerBg:#FEF3F2;
+      --dangerBorder:#FDA29B;
+      --ok:#027A48;
+      --btn:#111827;
+    }
+
+    body{
+      font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial;
+      margin:0;
+      background:var(--bg);
+      color:var(--text);
+    }
+
+    .page{
+      max-width:720px;
+      margin:28px auto;
+      padding:0 14px 28px;
+    }
+
+    h2{
+      margin:0 0 6px;
+      font-size:22px;
+      letter-spacing:-.2px;
+    }
+
+    .sub{
+      color:var(--muted);
+      font-size:13px;
+      line-height:1.35;
+      margin:0 0 14px;
+    }
+
+    .card{
+      background:var(--card);
+      border:1px solid var(--border);
+      border-radius:14px;
+      padding:16px;
+      box-shadow:0 8px 24px rgba(15,23,42,.06);
+    }
+
+    .warnBox{
+      background:var(--dangerBg);
+      border:1px solid var(--dangerBorder);
+      border-radius:12px;
+      padding:12px;
+      margin:12px 0 14px;
+    }
+    .warnTitle{
+      color:var(--danger);
+      font-weight:800;
+      margin:0 0 6px;
+      font-size:14px;
+    }
+    .warnText{
+      margin:0;
+      color:#7A271A;
+      font-size:13px;
+      line-height:1.35;
+    }
+
+    label{
+      display:block;
+      color:var(--muted);
+      font-size:13px;
+      margin:10px 0 6px;
+    }
+
+    input,textarea{
+      width:100%;
+      padding:12px;
+      border:1px solid var(--border);
+      border-radius:12px;
+      font-size:16px; /* mobile-friendly */
+      box-sizing:border-box;
+      background:#fff;
+    }
+    textarea{
+      min-height:160px;
+      resize:vertical;
+    }
+
+    .hintRow{
+      display:flex;
+      justify-content:space-between;
+      gap:10px;
+      align-items:center;
+      margin-top:8px;
+      flex-wrap:wrap;
+    }
+    .counter{
+      font-size:12px;
+      color:var(--muted);
+    }
+    .counter.bad{
+      color:var(--danger);
+      font-weight:700;
+    }
+
+    button{
+      width:100%;
+      margin-top:12px;
+      padding:12px 14px;
+      border-radius:12px;
+      border:1px solid var(--btn);
+      background:var(--btn);
+      color:#fff;
+      font-size:16px;
+      font-weight:700;
+      cursor:pointer;
+    }
+    button:disabled{
+      opacity:.6;
+      cursor:not-allowed;
+    }
+
+    .err{color:var(--danger); font-weight:700;}
+    .ok{color:var(--ok); font-weight:700;}
+
+    /* Small screens */
+    @media (max-width:480px){
+      .page{ margin:18px auto; padding:0 12px 22px; }
+      .card{ padding:14px; }
+      textarea{ min-height:180px; }
+    }
   </style>
 </head>
 <body>
+  <div class="page">
+    <h2>Player Statement</h2>
+    <p class="sub">
+      Your statement must be <b>precise</b>, <b>to the point</b>, and contain <b>factual information only</b>.
+      Maximum <b>250 characters</b>.
+    </p>
 
-  <h2>Player Statement</h2>
-  <p class="sub">Use this form to provide your account of the incident. Keep it factual.</p>
+    <div class="card">
+      <p id="linkStatus" class="sub"></p>
 
-  <div class="card">
-    <p id="linkStatus" class="sub"></p>
+      <div class="warnBox" role="alert" aria-live="polite">
+        <div class="warnTitle">IMPORTANT — Confidentiality & No Cross-Statements</div>
+        <p class="warnText">
+          Do <b>not</b> discuss this incident or your statement with anyone, and do <b>not</b> coordinate with other drivers.
+          No form of cross-statement is allowed. Only discuss this if you are approached directly by an <b>IFWL Steward</b>.
+        </p>
+      </div>
 
-    <label class="sub">Your name / driver tag</label>
-    <input id="name" placeholder="e.g. Sloth#123" />
+      <label for="name">Your name / driver tag</label>
+      <input id="name" placeholder="e.g. Sloth#123" autocomplete="name" />
 
-    <div style="height:12px"></div>
+      <label for="statement">Your statement (max 250 characters)</label>
+      <textarea id="statement" maxlength="250" placeholder="What happened? Keep it factual and short."></textarea>
 
-    <label class="sub">Your statement</label>
-    <textarea id="statement" placeholder="Explain what happened from your perspective…"></textarea>
+      <div class="hintRow">
+        <div class="sub" style="margin:0;">
+          Tip: include only what you saw/did, key timings, and any contact/position changes.
+        </div>
+        <div id="charCount" class="counter">0 / 250</div>
+      </div>
 
-    <div style="height:12px"></div>
-
-    <button id="submitBtn">Submit statement</button>
-
-    <p id="status" class="sub"></p>
+      <button id="submitBtn" type="button">Submit statement</button>
+      <p id="status" class="sub"></p>
+    </div>
   </div>
 
   <script type="module">
     import { db, firebaseNS } from './firebase-init.js';
+
+    const MAX = 250;
 
     const params = new URLSearchParams(window.location.search);
     const ticketId = params.get("ticketId") || params.get("ticket") || "";
@@ -49,11 +187,27 @@
     const linkStatus = document.getElementById("linkStatus");
     const statusEl = document.getElementById("status");
     const submitBtn = document.getElementById("submitBtn");
+    const statementEl = document.getElementById("statement");
+    const charCountEl = document.getElementById("charCount");
 
     function setStatus(text, cls) {
       statusEl.className = "sub " + (cls || "");
       statusEl.textContent = text;
     }
+
+    function updateCount() {
+      const len = (statementEl.value || "").length;
+      charCountEl.textContent = `${len} / ${MAX}`;
+      if (len >= MAX) charCountEl.classList.add("bad");
+      else charCountEl.classList.remove("bad");
+    }
+
+    // Keep it strictly within MAX even if pasted weirdly
+    statementEl.addEventListener("input", () => {
+      if (statementEl.value.length > MAX) statementEl.value = statementEl.value.slice(0, MAX);
+      updateCount();
+    });
+    updateCount();
 
     if (!ticketId || !inviteId) {
       linkStatus.innerHTML = `<span class="err">Invalid link.</span> Missing ticketId/inviteId.`;
@@ -68,13 +222,15 @@
         setStatus("Submitting…", "");
 
         const name = (document.getElementById("name").value || "").trim();
-        const statement = (document.getElementById("statement").value || "").trim();
+        let statement = (statementEl.value || "").trim();
 
         if (!statement) {
           setStatus("Statement is required.", "err");
           submitBtn.disabled = false;
           return;
         }
+
+        if (statement.length > MAX) statement = statement.slice(0, MAX);
 
         const inviteRef = db.collection("tickets").doc(ticketId).collection("invites").doc(inviteId);
         const inviteSnap = await inviteRef.get();
@@ -99,11 +255,7 @@
           submittedAt: firebaseNS.firestore.FieldValue.serverTimestamp()
         });
 
-        // Mark invite used (your rules allow signed-in update only, so this may fail on public)
-        // Because your rules require signed-in for invite update, we DO NOT do this from public.
-        // The "one statement per invite" is enforced by doc id + create rule.
         setStatus("Submitted ✅ Thank you.", "ok");
-
       } catch (e) {
         setStatus(e.message || String(e), "err");
         submitBtn.disabled = false;
