--- a/steward.html
+++ b/steward.html
@@ -18,7 +18,10 @@
     button.primary { background:#111827; color:#fff; border-color:#111827; }
     button:disabled { opacity:0.6; cursor:not-allowed; }
 
-    select, input, textarea { padding:10px; border:1px solid #d1d5db; border-radius:12px; width:100%; box-sizing:border-box; font-size:16px; }
+    select, input, textarea {
+      padding:10px; border:1px solid #d1d5db; border-radius:12px;
+      width:100%; box-sizing:border-box; font-size:16px;
+    }
     textarea { min-height:70px; resize:vertical; }
 
     .list { display:flex; flex-direction:column; gap:8px; max-height:680px; overflow:auto; -webkit-overflow-scrolling:touch; }
@@ -34,8 +37,6 @@
     .sec h3 { margin:0 0 8px; font-size:14px; }
     .badge { display:inline-block; padding:4px 10px; border-radius:999px; background:#eef2ff; border:1px solid #c7d2fe; font-size:12px; }
     .ok { color:#047857; font-weight:700; }
-    .warn { color:#b45309; font-weight:700; }
-    .danger { color:#b91c1c; font-weight:700; }
 
     .toast { position:fixed; right:16px; bottom:16px; background:#111827; color:#fff; padding:10px 12px; border-radius:12px; opacity:0; transform: translateY(8px); transition: all .18s ease; z-index:9999; }
     .toast.show { opacity:1; transform: translateY(0); }
@@ -44,6 +45,19 @@
 
     a { color:#111827; }
     a:hover { opacity:0.85; }
+
+    /* Red info/warning box */
+    .redBox{
+      border:1px solid #fca5a5;
+      background:#fef2f2;
+      color:#991b1b;
+      border-radius:12px;
+      padding:10px 12px;
+      margin-top:10px;
+      font-size:13px;
+      line-height:1.25;
+      font-weight:700;
+    }
 
     /* Responsive video embed */
     .videoWrap {
@@ -72,7 +86,6 @@
       .wrap { grid-template-columns: 1fr; }
       .list { max-height:320px; }
       .grid2 { grid-template-columns: 1fr; }
-      button { width:auto; }
       #refreshStatementsBtn { width:100%; }
       #refreshTicketsBtn { width:100%; }
       #filter { font-size:16px; }
@@ -153,50 +166,66 @@
               <button id="refreshStatementsBtn">Refresh</button>
             </div>
           </div>
-          <div class="muted" id="statementsHint">—</div>
+
+          <!-- NEW RED MESSAGE -->
+          <div class="redBox">
+            You are NOT required to submit a CAUSE review immediately — please await player statements to be submitted before completing your CAUSE review.
+          </div>
+
+          <div class="muted" id="statementsHint" style="margin-top:8px;">—</div>
           <div id="statementsList" style="margin-top:8px; display:flex; flex-direction:column; gap:8px;"></div>
         </div>
 
         <div class="sec" id="reviewSec">
           <div class="row" style="justify-content:space-between;">
-            <h3 style="margin:0;">My CAUSE Review</h3>
+            <h3 style="margin:0;">Initial CAUSE Review (Steward Officer View)</h3>
             <div id="myReviewStatus" class="badge">Not submitted</div>
+          </div>
+
+          <div class="muted" style="margin-top:6px;">
+            This CAUSE review is your <b>initial</b> assessment based on the footage/evidence available at the time. It is <b>not</b> the final say.
+            Submit your CAUSE review first, then head to Discord to deliberate as a steward team on the final outcome.
           </div>
 
           <div class="grid2" style="margin-top:10px;">
             <div>
               <label class="muted">C — Control (1–5)</label>
               <select id="cScore"></select>
-              <textarea id="cText" placeholder="Has the driver got full control of the car during this incident?"></textarea>
+              <textarea id="cText" placeholder="Score on the merit of the footage: control/loss of control, stability, reactions."></textarea>
             </div>
 
             <div>
               <label class="muted">A — Awareness (1–5)</label>
               <select id="aScore"></select>
-              <textarea id="aText" placeholder="Has the driver had reasonable time to see what’s around them?"></textarea>
+              <textarea id="aText" placeholder="Score on the merit of the footage: awareness of surroundings, mirrors, positioning."></textarea>
             </div>
 
             <div>
               <label class="muted">U — User Input (1–5)</label>
               <select id="uScore"></select>
-              <textarea id="uText" placeholder="Do the inputs match what we’d expect?"></textarea>
+              <textarea id="uText" placeholder="Score on the merit of the footage: braking/steering inputs, corrections, avoidability."></textarea>
             </div>
 
             <div>
               <label class="muted">S — Severity (1–5)</label>
               <select id="sScore"></select>
-              <textarea id="sText" placeholder="How severe was the outcome?"></textarea>
+              <textarea id="sText" placeholder="Score on the merit of the footage: impact, time loss, damage, race outcome."></textarea>
             </div>
 
             <div>
               <label class="muted">E — Environment (1–5)</label>
               <select id="eScore"></select>
-              <textarea id="eText" placeholder="Did conditions affect this incident?"></textarea>
+              <textarea id="eText" placeholder="Score on the merit of the footage: conditions, visibility, track factors."></textarea>
             </div>
 
             <div>
-              <label class="muted">Penalty Code (required)</label>
-              <input id="penaltyCode" placeholder="e.g. AC EVO|Technical Infractions - Incorrect Pit Stop Procedure">
+              <label class="muted">What penalty best fits this incident? (required)</label>
+
+              <!-- CHANGED: dropdown -->
+              <select id="penaltyCode">
+                <option value="">Select a penalty code…</option>
+              </select>
+
               <div class="muted" style="margin-top:8px;">
                 Head Steward-only notes are not shown here.
               </div>
@@ -205,11 +234,19 @@
 
           <div class="row" style="justify-content:flex-end; margin-top:10px;">
             <button id="loadMyReviewBtn">Load My Review</button>
-            <button class="primary" id="submitReviewBtn">Submit Review</button>
+            <button class="primary" id="submitReviewBtn">Submit CAUSE Review</button>
+          </div>
+
+          <div class="muted" style="margin-top:8px;">
+            After submitting your CAUSE review, head to Discord and deliberate as a team on this ticket’s outcome.
           </div>
 
           <div class="muted" style="margin-top:8px;">
             Submitting writes to <code>/tickets/&lt;ticket&gt;/reviews/&lt;yourEmailKey&gt;</code>.
+          </div>
+
+          <div class="muted" style="margin-top:8px;">
+            Note: the Head Steward’s aggregate CAUSE score is primarily used to break tied votes.
           </div>
         </div>
       </div>
@@ -338,6 +375,44 @@
       }
     }
 
+    // ---------- penalty codes dropdown ----------
+    async function loadPenaltyCodes() {
+      const sel = $("penaltyCode");
+      if (!sel) return;
+
+      // Don’t double-load if already has >1 option
+      if (sel.options && sel.options.length > 1) return;
+
+      try {
+        const resp = await fetch("./steward_rules.json", { cache: "no-store" });
+        if (!resp.ok) throw new Error("Could not load steward_rules.json");
+        const rules = await resp.json();
+
+        const items = Array.isArray(rules) ? rules : [];
+        // Build display like your WPF: "Code — Title (Penalty)"
+        const opts = items.map(r => {
+          const code = (r.code || "").trim();
+          const title = (r.title || "").trim();
+          const pen = (r.penalty || "").trim();
+          const display = pen ? `${code} — ${title} (${pen})` : `${code} — ${title}`;
+          return { value: display, text: display };
+        }).filter(o => o.value && o.text);
+
+        for (const o of opts) {
+          const opt = document.createElement("option");
+          opt.value = o.value;
+          opt.textContent = o.text;
+          sel.appendChild(opt);
+        }
+      } catch (e) {
+        // fallback: keep dropdown but add a single hint option
+        const opt = document.createElement("option");
+        opt.value = "";
+        opt.textContent = "Unable to load penalty codes (steward_rules.json missing).";
+        sel.appendChild(opt);
+      }
+    }
+
     // ---------- auth / role ----------
     let currentUser = null;
     let currentEmail = "";
@@ -386,6 +461,8 @@
         }
 
         $("who").textContent = `Signed in as: ${currentEmail} | role: ${data.role || "steward"}`;
+
+        await loadPenaltyCodes();
         await loadTickets();
       } catch (e) {
         toast("Auth error: " + (e?.message || e));
@@ -605,7 +682,7 @@
         $("myReviewStatus").textContent = "Submitted ✅";
         $("myReviewStatus").className = "badge ok";
 
-        toast("Review submitted ✅");
+        toast("CAUSE review submitted ✅");
         await loadTickets();
       } catch (e) {
         toast("Submit failed: " + (e?.message || e));
